# employee-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
employee_manager/: cli.py  main.py  operations.py
employee_manager/client/: database.py
employee_manager/iac/: dynamodb.yaml
employee_manager/model/: employee.py  person.py
employee_manager/presentation/: printers.py
employee_manager/processors/: io.py  processors.py
employee_manager/validators/: validators.py
tests/: test_operations.py
tests/model/: test_employee.py  test_person.py
tests/utils/: test_utils.py
tests/validators/: test_validators.py
