[tool.poetry]
name = "employee-manager"
version = "0.1.0"
description = ""
authors = ["Bart K <bartlomiej.kornowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.131"
moto = "^5.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./employee_manager"